--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>AI Tool Directory</title>
+    <link rel="stylesheet" href="https://bootswatch.com/5/solar/bootstrap.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+   <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
